--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My website</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to our website!</h1> <!--Updated heading-->
+    <p>Hello World!</p>
     <p>Welcome to our website!</p> <!--New line added-->
 </body>
 </html>
